k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-prod
  labels:
    app.kubernetes.io/part-of: weather-api
    env: prod
