k8s/overlays/prod/deployment-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
spec:
  replicas: 3
